--- a/CoffeePi/sb_jamaicamecrazy.html
+++ b/CoffeePi/sb_jamaicamecrazy.html
@@ -34,8 +34,8 @@
                 <hr>
             </div>
         </div>
-        <div class="col py-3 center-div-v">
-            <h3>Touch the brewed Coffee in the menu to display</h3>
+        <div class="col py-3 imgbox">
+            <img class="center-fit" src='img/sb_jamaicamecrazy.png'>
         </div>
     </div>
 </div>
