Added Highlander Grogg

--- a/CoffeePi/ps_highlandergrogg.html
+++ b/CoffeePi/ps_highlandergrogg.html
@@ -39,8 +39,8 @@
                 <hr>
             </div>
         </div>
-        <div class="col py-3 center-div-v">
-            <h3>Touch the brewed Coffee in the menu to display</h3>
+        <div class="col py-3 imgbox">
+            <img class="center-fit" src='img/ps_highlandergrogg.png'>
         </div>
     </div>
 </div>
