--- a/CoffeePi/sb_jamaicamecrazy.html
+++ b/CoffeePi/sb_jamaicamecrazy.html
@@ -30,6 +30,11 @@
                             <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Jamaican Me Crazy</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a href="ps_highlandergrogg.html" class="nav-link align-middle px-0">
+                            <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Highlander Grogg</span>
+                        </a>
+                    </li>
                 </ul>
                 <hr>
             </div>
